# fastapi-poc

./: Dockerfile  README.md  openapi.yaml  requirements.txt  setup.cfg
.openapi-generator/: FILES
src/openapi_server/: config.py  database.py  main.py  security_api.py
src/openapi_server/apis/: consent_api.py  consent_api_base.py  default_api.py  default_api_base.py  demographic_api.py  demographic_api_base.py  enrollment_api.py  enrollment_api_base.py  events_api.py  events_api_base.py  healthcheck_api.py  healthcheck_api_base.py  non_patients_api.py  non_patients_api_base.py  pa_ce_api.py  pa_ce_api_base.py
src/openapi_server/models/: address.py  address_optional.py  alternate_contact.py  caregiver.py  case_management_service.py  clinical_details.py  clinical_education_interaction.py  clinical_education_training.py  communication.py  consent.py  consents_update_event.py  consents_update_event_all_of_data.py  copay_service.py  data_provider_info.py  demographic_delete_event.py  demographic_delete_event_all_of_data.py  demographic_merge_event.py  demographic_merge_event_all_of_data.py  demographic_un_merge_event.py  demographic_un_merge_event_all_of_data.py  demographic_update_event.py  demographic_update_event_all_of_data.py  email.py  enrollment_event.py  error.py  error_default.py  error_defined.py  event_metadata.py  failed_event.py  failed_event_all_of_event.py  individual.py  (+35 more)
tests/: test_consent_api.py  test_default_api.py  test_demographic_api.py  test_enrollment_api.py  test_events_api.py  test_healthcheck_api.py  test_non_patients_api.py  test_pa_ce_api.py
