[metadata]
name = openapi_server
version = 0.7.1
description = Patient Engagement Enterprise API allows multiple communication channels (e.g. websites,  HUbs, etc.) to enrroll and/or manage patient&#39;s support porgrams and services offered by Boehringer Ingelheim brands.  
long_description = file: README.md
keywords = OpenAPI Patient Engagement Enterprise API
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
